only check format in DEV and QA

--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -23,6 +23,7 @@ jobs:
         exit 1
       fi
     displayName: Check Format
+    condition: in(variables.ENVIRONMENT_NAME, 'DEV', 'QA')
 
   - task: TerraformTaskV1@0
     displayName: Plan
