--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -80,7 +80,7 @@ stages:
           steps:
           - template: ${{ parameters.deployType }}/${{ sourceDirectory.type }}-validate.yml
             parameters:
-              name: ${{ sourceDirectory.name }}
+              directory: ${{ sourceDirectory.name }}
 
   - ${{ if and(notIn(parameters.deployType, 'null', 'LambdaService'), ne(parameters.useContainerImage, false)) }}:  
     - template: helpers/container-job.yml
