--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -107,7 +107,9 @@ stages:
         ${{ if notIn(parameters.deployType, 'LambdaService') }}:
           condition: and(succeeded(), or(ne(variables.IS_INFRA_CHANGE, 'false'), ne(variables.IS_OUPUT_CHANGE, 'false')))
         ${{ if in(parameters.deployType, 'LambdaService') }}:
-          dependsOn: BuildSources
+          dependsOn: 
+          - ${{ each sourceDirectory in parameters.buildDirectories }}:
+            - Build_${{ sourceDirectory.name }}
         ${{ if in(parameters.deployType, 'ADO') }}:
           env:
             AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
