--- a/Terraform/deploy.yml
+++ b/Terraform/deploy.yml
@@ -3,7 +3,7 @@ parameters:
   type: string
   default: succeeded()
 - name: dependsOn
-  type: string
+  type: object
   default: ''
 - name: env 
   type: object
