--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -1,10 +1,15 @@
+parameters:
+- name: buildDirectories
+  type: object
+
 steps:
 - script: mkdir -p terraform/build/
   displayName: Make Lambda .zip Directory
 
-- download: current
-  artifact: lambdas
-  displayName: Get Lambda Artifacts
+- ${{ each sourceDirectory in parameters.buildDirectories }}:
+  - download: current
+    artifact: lambda-${{ sourceDirectory.name }}
+    displayName: Get ${{ sourceDirectory.name }} Artifact
 
-- script: mv $(Pipeline.Workspace)/lambdas/* terraform/build
-  displayName: Stage Lambda Artifacts
+  - script: mv $(Pipeline.Workspace)/lambda-${{ sourceDirectory.name }}/* terraform/build
+    displayName: Stage ${{ sourceDirectory.name }} Artifact
