--- a/LambdaService/nodejs/build.yml
+++ b/LambdaService/nodejs/build.yml
@@ -17,5 +17,5 @@ steps:
     stagingDir: $(Build.ArtifactStagingDirectory)
 
 - publish: $(Build.ArtifactStagingDirectory)
-  artifact: lambdas-${{ parameters.directory }}
+  artifact: lambda-${{ parameters.directory }}
   displayName: Publish ${{ parameters.directory }}
