--- a/LambdaService/dockerfile/build.yml
+++ b/LambdaService/dockerfile/build.yml
@@ -18,6 +18,8 @@ steps:
     repository: ${{ parameters.directory }}
     tags: latest
     arguments: '--secret id=npmrc-package,src=.npmrc'
+  env:
+    DOCKER_BUILDKIT: 1
 
 - task: ECRPushImage@1
   inputs:
