--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -7,9 +7,10 @@ steps:
   displayName: Make Lambda .zip Directory
 
 - ${{ each sourceDirectory in parameters.buildDirectories }}:
-  - download: current
-    artifact: lambda-${{ sourceDirectory.name }}
-    displayName: Get ${{ sourceDirectory.name }} Artifact
+  - ${{ if ne(sourceDirectory.type, 'dockerfile') }}:
+    - download: current
+      artifact: lambda-${{ sourceDirectory.name }}
+      displayName: Get ${{ sourceDirectory.name }} Artifact
 
-  - script: mv $(Pipeline.Workspace)/lambda-${{ sourceDirectory.name }}/* terraform/build
-    displayName: Stage ${{ sourceDirectory.name }} Artifact
+    - script: mv $(Pipeline.Workspace)/lambda-${{ sourceDirectory.name }}/* terraform/build
+      displayName: Stage ${{ sourceDirectory.name }} Artifact
